--- a/LimakeSilverLightUI/LimakeSilverLightUI.csproj
+++ b/LimakeSilverLightUI/LimakeSilverLightUI.csproj
@@ -75,6 +75,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="BeerDisplay.xaml.cs">
+      <DependentUpon>BeerDisplay.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Die.xaml.cs">
       <DependentUpon>Die.xaml</DependentUpon>
     </Compile>
@@ -143,6 +146,15 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Noppa.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="BeerDisplay.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="beer.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\$(SilverlightVersion)\Microsoft.Silverlight.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
