--- a/Limake/Limake.csproj
+++ b/Limake/Limake.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BasicPlayer.cs" />
     <Compile Include="ConsoleGameDisplay.cs" />
     <Compile Include="ConsolePlayer.cs" />
     <Compile Include="Game.cs" />
