--- a/LimakeTest/LimakeTest.csproj
+++ b/LimakeTest/LimakeTest.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BasicPlayerTest.cs" />
     <Compile Include="SituationTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
