--- a/LimakeSilverLightUI/LimakeSilverLightUI.csproj
+++ b/LimakeSilverLightUI/LimakeSilverLightUI.csproj
@@ -102,6 +102,9 @@
     </Compile>
     <Compile Include="ThreadedLimakeGame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TurnDisplay.xaml.cs">
+      <DependentUpon>TurnDisplay.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -171,6 +174,12 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="StartupPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="TurnDisplay.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
